# tarot-api

./: LICENSE  README.md  pyproject.toml
app/: main.py
app/api/endpoints/: petit_lenormand.py
app/api/schema/: petit_lenormand.py
app/core/: config.py
app/models/: card_model.py  petit_lenormand_model.py
app/services/: cards.py  petit_lenormand_service.py
app/tests/: test_petit.py
